# avcdec_core

./: .gitignore  CMakeLists.txt  README.md
JM/ldecod/src/: annexb.c  image.c  ldecod.c  output.c
avcdec/include/: AvcDecoder.h
avcdec/src/: AvcDecoder.cpp
player_mdi/: CMakeLists.txt
player_mdi/include/: decoder_thread.h  imageviewer.h  mainwindow.h  videoplayer.h
player_mdi/src/: decoder_thread.cpp  imageviewer.cpp  main.cpp  mainwindow.cpp  videoplayer.cpp
